--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -24,6 +24,10 @@
     padding: 0 0 50px 0;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   }
+
+  .hidden {
+    display: hidden;
+  }
   
   .box img {
     min-height: 230px;
