--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -19,8 +19,8 @@
   
   .box {
     width: 30%;
-    min-height: 600px;
-    max-height: 600px;
+    min-height: 640px;
+    max-height: 640px;
     margin-bottom: 40px;
     padding: 0 0 50px 0;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
@@ -64,6 +64,7 @@
     padding: 5px 10px;
     color: #a5a58d;
     background-color: #FAF9F6; 
+    border-radius: 4px;
   }
   
   .box-4 .fa-check, .box-4 p {
